Fix handling of .alignwide

--- a/src/assets/scss/global/_base.scss
+++ b/src/assets/scss/global/_base.scss
@@ -35,6 +35,10 @@ html {
     }
 }
 
+body {
+    overflow-x: hidden;
+}
+
 section {
     position: relative;
 }
